refactor: sonarqube bug 판정 수정