@@ -7,6 +7,7 @@ import lombok.*;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Builder
 @Getter
@@ -34,12 +35,13 @@ public class MukBTIQuestionEntity {
     @JoinColumn(name = "mbti_id")
     private MukBTIEntity mukBTIEntity;
 
-    public Question toQuestion(){
+    public Question toQuestion() {
         return Question.builder()
                 .quizId(this.questionId)
                 .context(this.content)
                 .img(this.imageSrc != null ? this.imageSrc : null)
-                .answers(mukBTIAnswerEntities.stream().map(MukBTIAnswerEntity::toAnswer).toList())
+                .answers(mukBTIAnswerEntities.stream().map(MukBTIAnswerEntity::toAnswer)
+                        .collect(Collectors.toList()))
                 .build();
     }
 }
